# R-Type

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Animation_8hpp_source.html  AssetManager_8hpp_source.html  Audio_8hpp_source.html  Button_8hpp_source.html  CMakeLists.txt  CMakePresets.json  Clickable_8hpp_source.html  Collider_8hpp_source.html  Collision_8hpp_source.html  Commands_8hpp_source.html  ComponentArray_8hpp_source.html  ComponentManager_8hpp_source.html  Component_8hpp_source.html  ConfigLoader_8hpp_source.html  ControlableEntity_8hpp_source.html  Controllable_8hpp_source.html  Core_8hpp_source.html  Display_8hpp_source.html  Displayable_8hpp_source.html  Doxyfile  EcsSerializer_8hpp_source.html  EntityBuilder_8hpp_source.html  EntityFactory_8hpp_source.html  EntityManager_8hpp_source.html  EntityType_8hpp_source.html  Entity_8hpp_source.html  EventListenerWrapper_8hpp_source.html  EventRegistry_8hpp_source.html  Event_8hpp_source.html  Events_8hpp_source.html  GUI_8hpp_source.html  GameScene_8hpp_source.html  Game_8hpp_source.html  Gameplay_8hpp_source.html  Gravity_8hpp_source.html  Health_8hpp_source.html  (+921 more)
client/: CMakeLists.txt
client/include/: Client.hh  Client.hpp  Component.hh  Component.hpp  Controller.hpp  Game.hpp  LobbiesScene.hh  Network.hpp  RTypeClient.hpp  Scene.hh  Scene.hpp  WelcomeScene.hh  client.h
client/include/Components/: Background.hpp  Button.hpp  InputText.hpp
client/include/Scenes/: Game.hpp  LobbiesScene.hpp  Lobby.hpp  Manager.hpp  Welcome.hpp  WelcomeScene.hpp
client/include/graphics/: GUI.hpp
client/include/network/: Constants.hpp  Network.hpp
client/include/network/commands/: ConnectToServer.hpp  GodMode.hpp  IHandler.hpp  Input.hpp  JoinGame.hpp  JoinRoom.hpp  JoinRoomAuto.hpp  KickPlayer.hpp  Spectate.hpp  StartGame.hpp  Tracker.hpp  UpdateName.hpp
client/include/network/system/: Keyboard.hpp  Network.hpp
client/include/network/tools/: EndianConverter.hpp  Logs.hpp
client/include/scene/: EcsGameController.hpp  GameScene.hpp  LobbyScene.hpp  Manager.hpp  SceneManager.hpp  WelcomeScene.hpp
client/src/: Client.cpp  Controller.cpp  Game.cpp  Network.cpp  main.cpp
client/src/ClientCommunication/: ClientCommunication.cpp
client/src/Component/: Component.cpp
client/src/Components/: Background.cpp  Button.cpp  InputText.cpp
client/src/SceneManager/: SceneManager.cpp
client/src/Scenes/: Game.cpp  LobbiesScene.cpp  Lobby.cpp  Manager.cpp  Welcome.cpp  WelcomeScene.cpp
client/src/graphics/: GUI.cpp
client/src/network/: Network.cpp
client/src/network/commands/: ConnectToServer.cpp  GodMode.cpp  Input.cpp  JoinGame.cpp  JoinRoom.cpp  JoinRoomAuto.cpp  KickPlayer.cpp  Spectate.cpp  StartGame.cpp  Tracker.cpp  UpdateName.cpp
client/src/network/tools/: EndianConverter.cpp  Logs.cpp
client/src/scene/: EcsGameController.cpp  Game.cpp  GameScene.cpp  LobbyScene.cpp  Manager.cpp  SceneManager.cpp  WelcomeScene.cpp
doc/: README.md  (+1 more)
game/rtype/: CMakeLists.txt
game/rtype/config/: config.json  game_stage_one.json  menu_hud_game.json  menu_lobby.json  menu_welcome.json
game/rtype/include/scene/: ClientGame.hpp  HostGame.hpp  Lobby.hpp  SoloHostGame.hpp  Welcome.hpp
game/rtype/include/sceneController/: BindingController.hpp  ClientGameController.hpp  GraphicController.hpp  HostGameController.hpp  LobbyController.hpp  NetworkController.hpp  RendererController.hpp  SceneController.hpp  WelcomeController.hpp
game/rtype/include/script/: DataHolder.hpp  EnemyLinear.hpp  EnemySinusoidal.hpp
game/rtype/src/scene/: ClientGame.cpp  HostGame.cpp  Lobby.cpp  SoloHostGame.cpp  Welcome.cpp
game/rtype/src/sceneController/: BindingController.cpp  ClientGameController.cpp  GraphicController.cpp  HostGameController.cpp  (+5 more)
gameEngine/: CMakeLists.txt
gameEngine/include/UI/: Window.hpp
gameEngine/include/component/: ComponentBuilder.hpp  Gravity.hpp  KeyInput.hpp  Sprite.hpp  Transform.hpp
gameEngine/include/constants/: constants.hpp
gameEngine/include/ecs/: Mediator.hpp  Signature.hpp  TextureManager.hpp
gameEngine/include/gfx/: IAudio.hpp  IDisplay.hpp  IRenderer.hpp  Renderer.hpp
gameEngine/include/logic/: SystemLogic.hpp
gameEngine/include/math/: Physics.hpp
gameEngine/include/network/: Commands.hpp  MessageType.hpp  Messages.hpp  Responses.hpp  Status.hpp  Statuses.hpp
gameEngine/include/system/: Animation.hpp  Physics.hpp
gameEngine/src/: TextureManager.cpp  testlib.cpp
gameEngine/src/UI/: UIFactory.cpp  Window.cpp
gameEngine/src/asset/: AssetManager.cpp  ConfigLoader.cpp
gameEngine/src/core/: Core.cpp
gameEngine/src/ecs/: EntityBuilder.cpp  RegistryBuilder.cpp
gameEngine/src/entity/: ConfigLoader.cpp  EntityBuilder.cpp  EntityFactory.cpp
gameEngine/src/logic/: SystemLogic.cpp
gameEngine/src/math/: Physics.cpp
gameEngine/src/scene/: SceneContainer.cpp  SceneManager.cpp  SimpleScene.cpp
gameEngine/src/script/: ScriptManager.cpp
server/: CMakeLists.txt
server/include/: Client.hpp  Constants.hpp  RTypeNetwork.hpp  Room.hpp  ThreadSafeQueue.hpp  UDPServer.hpp
server/include/Commands/: ConnectToServer.hpp  Hello.hpp  IHandler.hpp  Input.hpp  JoinRoom.hpp  StartGame.hpp  UpdateName.hpp
server/include/commands/: ConnectToServer.hpp  GodMode.hpp  IHandler.hpp  Input.hpp  JoinGame.hpp  JoinRoom.hpp  JoinRoomAuto.hpp  KickPlayer.hpp  Spectate.hpp  StartGame.hpp  UpdateName.hpp
server/include/game/: Game.hpp  IGame.hpp
server/include/network/: Client.hpp  Room.hpp  UDPServer.hpp
server/include/tools/: EndianConverter.hpp  Logs.hpp
server/src/: Client.cpp  Room.cpp  ThreadSafeQueue.cpp  UDPServer.cpp  main.cpp
server/src/Commands/: ConnectToServer.cpp  Hello.cpp  Input.cpp  JoinRoom.cpp  StartGame.cpp  UpdateName.cpp
server/src/commands/: ConnectToServer.cpp  GodMode.cpp  Input.cpp  JoinGame.cpp  JoinRoom.cpp  JoinRoomAuto.cpp  KickPlayer.cpp  Spectate.cpp  StartGame.cpp  UpdateName.cpp
server/src/game/: Game.cpp
server/src/network/: Client.cpp  Room.cpp  UDPServer.cpp
server/src/tools/: EndianConverter.cpp  Logs.cpp
server/tests/: TestClient.cpp  TestMain.cpp
(+2158 files in other folders)
